--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,32 @@
+html {
+    font-size: 62.5%;  /** Reset para REMS - 62.5% = 10px de 16px **/
+}
+
+body {
+    font-family: 'Lato', sans-serif;
+    font-size: 1.6rem;
+}
+
 /** GLOBALES **/
 .contenedor {
-    max-width: 1200px;
+    max-width: 120rem; /** = 1200px **/
     margin: 0 auto;
+}
+
+h1 {
+    font-size: 3.8rem;
+}
+
+h2 {
+    font-size: 3.4rem;
+}
+
+h3 {
+    font-size: 3rem;
+}
+
+h4 {
+    font-size: 2.6rem;
 }
 
 /* HEADER */
@@ -10,13 +35,27 @@
     background-position: center center;
     background-size: cover;
     height: 100vh;
-    min-height: 600px;
+    min-height: 60rem;
+}
+
+.contenido-header {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.contenido-header h1 {
+    color: #ffffff;
+    padding-bottom: 2rem;
+    max-width: 60rem;
+    line-height: 2;    
 }
 
 .barra {
     display: flex;
     justify-content: space-between;
-    padding-top: 30px;  
+    padding-top: 3rem;  
     align-items: center;  
 }
 
@@ -24,8 +63,8 @@
 .navegacion a{
     color: #ffffff;
     text-decoration: none;
-    font-size: 18px;
-    margin-right: 20px;
+    font-size: 1.8rem; /** = 18px **/
+    margin-right: 2rem;
 }
 
 .navegacion a:hover {
@@ -35,4 +74,3 @@
 .navegacion a:last-of-type {
     margin-right: 0;
 }
-
