seccion nosotros, html y css terminado

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ html {
 body {
     font-family: 'Lato', sans-serif;
     font-size: 1.6rem;
+    line-height: 2;
 }
 
 /** GLOBALES **/
@@ -28,6 +29,21 @@ h3 {
 h4 {
     font-size: 2.6rem;
 }
+
+/** UTILIDADES **/
+.seccion {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.fw-300 {
+    font-weight: 300;
+}
+
+.centrar-texto {    
+    text-align: center;
+}
+
 
 /* HEADER */
 .site-header.inicio {
@@ -73,4 +89,19 @@ h4 {
 
 .navegacion a:last-of-type {
     margin-right: 0;
+}
+
+/* Iconos nosotros */
+.iconos-nosotros {
+    display: flex;
+    justify-content: space-between;
+}
+
+.icono {
+    flex-basis: calc(33.3% - 1rem);
+    text-align: center;
+}
+
+.icono h3 {
+    text-transform: uppercase;
 }
