seccion venta y contacto. html y css terminado

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,10 @@
 html {
+    box-sizing: border-box;
     font-size: 62.5%;  /** Reset para REMS - 62.5% = 10px de 16px **/
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 
 body {
@@ -9,6 +14,10 @@ body {
 }
 
 /** GLOBALES **/
+img {
+    max-width: 100%;
+}
+
 .contenedor {
     max-width: 120rem; /** = 1200px **/
     margin: 0 auto;
@@ -42,6 +51,30 @@ h4 {
 
 .centrar-texto {    
     text-align: center;
+}
+
+.d-block {
+    display: block!important;
+}
+
+/** BOTONES **/
+.boton {
+    color: #ffffff;
+    font-weight: 700;
+    text-decoration: none;
+    font-size: 1.8rem;
+    padding: 1rem 3rem;    
+    margin-top: 3rem;        
+    display: inline-block;    
+    text-align: center;
+}
+
+.boton-amarillo {
+    background-color: #E08709;
+}
+
+.boton-verde {
+    background-color: #71B100;
 }
 
 
@@ -104,4 +137,72 @@ h4 {
 
 .icono h3 {
     text-transform: uppercase;
+}
+
+
+/** ANUNCIOS **/
+.contenedor-anuncios {
+    display: flex;
+    justify-content: space-between;
+}
+
+.anuncio {
+    flex-basis: calc(33.3% - 1rem);
+    border: 1px solid #B5B5B5;
+    background-color: #F5F5F5;    
+}
+
+.contenido-anuncio {
+    padding: 2rem;
+}
+
+.contenido-anuncio h3, 
+.contenido-anuncio p {
+    margin: 0;
+}
+
+.precio {
+    color: #71B100;
+    font-weight: 700;
+}
+
+.iconos-caracteristicas {
+    list-style: none;
+    padding: 0;
+    display: flex;    
+    justify-content: space-evenly;
+}
+
+.iconos-caracteristicas li {
+    /* flex: 1; */
+    display: flex;
+}
+
+.iconos-caracteristicas li img {
+    margin-right: 2rem;
+}
+
+.ver-todas {
+    display: flex;
+    justify-content: flex-end;
+}
+
+
+/** CONTACTO HOME**/
+.imagen-contacto {
+    background-image: url(../img/encuentra.jpg);
+    background-position: center center;
+    background-size: cover;
+    height: 40rem;
+    display: flex;
+    align-items: center;    
+}
+
+.contenido-contacto {
+    flex: 1;
+    color: #ffffff;
+}
+
+.contenido-contacto p {
+    font-size: 1.8rem;
 }
