seccion testimoniales, html y css terminado

--- a/css/styles.css
+++ b/css/styles.css
@@ -262,3 +262,31 @@ h4 {
 .texto-entrada span {
     color: #E08709;
 }
+
+/** TESTIMONIALES **/
+.testimonial {
+    background-color: #71B100;
+    font-size: 2.4rem;
+    padding: 2rem;
+    color: #ffffff;
+    border-radius: 2rem;
+}
+
+.testimonial p {
+    text-align: right;
+}
+
+.testimonial blockquote::before {
+    content: '';
+    background-image: url(../img/comilla.svg);
+    width: 4rem;
+    height: 4rem;    
+    position: absolute;
+    left: -2rem;
+}
+
+.testimonial blockquote {
+    position: relative;
+    padding-left: 5rem;
+    font-weight: 300;
+}
