footer, html y css terminado. Pagina index terminado

--- a/css/styles.css
+++ b/css/styles.css
@@ -290,3 +290,21 @@ h4 {
     padding-left: 5rem;
     font-weight: 300;
 }
+
+
+/** FOOTER **/
+.site-footer {
+    background-color: #333333;
+    margin: 0;
+}
+
+.contenedor-footer {
+    padding: 3rem 0;   
+    display: flex; 
+    justify-content: space-between;
+}
+
+.copyright {
+    margin: 0;
+    color: #ffffff;
+}
