--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,11 @@ h4 {
 
 
 /* HEADER */
+.site-header {
+    background-color: #333333;
+    padding: 1rem 0 3rem 0;
+}
+
 .site-header.inicio {
     background-image: url(../img/header.jpg);
     background-position: center center;
@@ -307,4 +312,18 @@ h4 {
 .copyright {
     margin: 0;
     color: #ffffff;
+}
+
+/** PAGINAS INTERNAS **/
+.contenido-nosotros {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 2rem;
+}
+
+.texto-nosotros blockquote {
+    font-weight: 900;
+    font-size: 2rem;
+    margin: 0;
+    padding: 1rem 0 3rem 0;
 }
