--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,11 @@ h4 {
     margin-top: 3rem;        
     display: inline-block;    
     text-align: center;
+    border: none;
+}
+
+.boton:hover {  
+    cursor: pointer;
 }
 
 .boton-amarillo {
@@ -342,6 +347,57 @@ h4 {
 
 /* anuncio */
 .resumen-propiedad {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/** contacto **/
+.contacto p {
+    font-size: 1.4rem;
+    color: #4f4f4f;
+    margin: 2rem 0 0 0;
+}
+
+legend {
+    font-size: 2rem;
+    color: #4f4f4f;
+}
+
+label {
+    font-weight: 700;
+    text-transform: uppercase;
+    display: block;    
+}
+
+input:not([type="submit"]),
+textarea, 
+select {
+    padding: 1rem;
+    display: block;
+    width: 100%;
+    background-color: #e1e1e1e1;
+    margin-bottom: 2rem;
+    border: none;
+    border-radius: 1rem    
+}
+
+input[type="radio"] {
+    width: auto;
+    margin: 0;
+}
+
+select {
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+textarea {
+    height: 20rem;
+}
+
+.forma-contacto {
+    max-width: 30rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
