--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,12 @@
 html {
     box-sizing: border-box;
-    font-size: 62.5%;  /** Reset para REMS - 62.5% = 10px de 16px **/
+    font-size: 62.5%;
+    /** Reset para REMS - 62.5% = 10px de 16px **/
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
 
@@ -13,14 +16,18 @@ body {
     line-height: 2;
 }
 
+
 /** GLOBALES **/
+
 img {
     max-width: 100%;
 }
 
 .contenedor {
-    max-width: 120rem; /** = 1200px **/
+    max-width: 120rem;
+    /** = 1200px **/
     margin: 0 auto;
+    width: 95%;
 }
 
 h1 {
@@ -39,7 +46,9 @@ h4 {
     font-size: 2.6rem;
 }
 
+
 /** UTILIDADES **/
+
 .seccion {
     margin-top: 2rem;
     margin-bottom: 2rem;
@@ -49,7 +58,7 @@ h4 {
     font-weight: 300;
 }
 
-.centrar-texto {    
+.centrar-texto {
     text-align: center;
 }
 
@@ -61,20 +70,31 @@ h4 {
     max-width: 80rem;
 }
 
+
 /** BOTONES **/
+
 .boton {
     color: #ffffff;
     font-weight: 700;
     text-decoration: none;
     font-size: 1.8rem;
-    padding: 1rem 3rem;    
-    margin-top: 3rem;        
-    display: inline-block;    
+    padding: 1rem 3rem;
+    margin-top: 3rem;
+    display: inline-block;
     text-align: center;
     border: none;
+    display: block;
+    flex: 0 0 100%;
 }
 
-.boton:hover {  
+@media (min-width: 768px) {
+    .boton {
+        display: inline-block;
+        flex: 0 0 auto;
+    }
+}
+
+.boton:hover {
     cursor: pointer;
 }
 
@@ -88,6 +108,7 @@ h4 {
 
 
 /* HEADER */
+
 .site-header {
     background-color: #333333;
     padding: 1rem 0 3rem 0;
@@ -106,47 +127,101 @@ h4 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    text-align: center;
+}
+
+@media (min-width: 768px) {
+    .contenido-header {
+        text-align: left;
+    }
 }
 
 .contenido-header h1 {
     color: #ffffff;
     padding-bottom: 2rem;
     max-width: 60rem;
-    line-height: 2;    
+    line-height: 2;
 }
 
 .barra {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 3rem;  
-    align-items: center;  
+    padding-top: 3rem;
 }
 
+@media (min-width: 768px) {
+    .barra {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+
 /* NAVEGACION */
-.navegacion a{
+
+.navegacion a {
     color: #ffffff;
     text-decoration: none;
-    font-size: 1.8rem; /** = 18px **/
-    margin-right: 2rem;
+    font-size: 2.2rem;  
+    display: block;
+}
+
+@media (min-width: 768px) {
+    .navegacion a {
+        display: inline-block;
+        font-size: 1.8rem;   /** = 18px **/  
+        margin-right: 2rem;
+    }
+    .navegacion a:last-of-type {
+        margin-right: 0;
+    }
 }
 
 .navegacion a:hover {
     color: #71B100;
 }
 
-.navegacion a:last-of-type {
-    margin-right: 0;
+/** MOBILE MENU **/
+.mobile-menu img {
+    width: 5rem;
 }
+
+@media (min-width: 768px) {
+    .mobile-menu {
+        display: none;
+    }
+}
+
+.navegacion:target {
+    display: block;
+}
+
+.navegacion {
+    display: none;
+}
+
+@media (min-width: 768px) {
+    .navegacion {
+        display: block;
+    }
+}
+
 
 /* Iconos nosotros */
-.iconos-nosotros {
-    display: flex;
-    justify-content: space-between;
+@media (min-width: 768px){
+    .iconos-nosotros {
+        display: flex;
+        justify-content: space-between;
+    }
 }
 
-.icono {
-    flex-basis: calc(33.3% - 1rem);
+.icono {    
     text-align: center;
+}
+
+@media (min-width: 768px){
+    .icono {
+        flex-basis: calc(33.3% - 1rem);
+    }
 }
 
 .icono h3 {
@@ -155,27 +230,37 @@ h4 {
 
 
 /** ANUNCIOS **/
-.contenedor-anuncios {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap; /* mantiene las 3 columnas por fila */
+@media (min-width: 768px) {
+    .contenedor-anuncios {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;  /* mantiene las 3 columnas por fila */
+    }
 }
 
-.anuncio {
-    flex: 0 0 calc(33.3% - 1rem); /* shorthand flex, para grow - shrink - basis */
-    /* flex-grow: 0;
-    flex-shrink: 0;
-    flex-basis: calc(33.3% - 1rem); */
+
+
+.anuncio {    
     border: 1px solid #B5B5B5;
-    background-color: #F5F5F5;  
-    margin-bottom: 2rem;  
+    background-color: #F5F5F5;
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) {
+    .anuncio {
+        flex: 0 0 calc(33.3% - 1rem);
+        /* shorthand flex, para grow - shrink - basis */
+        /* flex-grow: 0;
+        flex-shrink: 0;
+        flex-basis: calc(33.3% - 1rem); */
+    }
 }
 
 .contenido-anuncio {
     padding: 2rem;
 }
 
-.contenido-anuncio h3, 
+.contenido-anuncio h3,
 .contenido-anuncio p {
     margin: 0;
 }
@@ -188,10 +273,12 @@ h4 {
 .iconos-caracteristicas {
     list-style: none;
     padding: 0;
-    display: flex;    
+    display: flex;
     justify-content: space-evenly;
-    max-width: 500px; /* para anuncio.html*/
-    flex: 1; /* para anuncio.html*/
+    max-width: 500px;
+    /* para anuncio.html*/
+    flex: 1;
+    /* para anuncio.html*/
 }
 
 .iconos-caracteristicas li {
@@ -210,17 +297,18 @@ h4 {
 
 
 /** CONTACTO HOME**/
+
 .imagen-contacto {
     background-image: url(../img/encuentra.jpg);
     background-position: center center;
     background-size: cover;
     height: 40rem;
     display: flex;
-    align-items: center;    
+    align-items: center;
 }
 
 .contenido-contacto {
-    flex: 1;
+    flex: 0 0 95%;
     color: #ffffff;
 }
 
@@ -230,36 +318,49 @@ h4 {
 
 
 /** SECCION INFERIOR **/
-.seccion-inferior {
-    display: flex;
-    justify-content: space-between;
+
+@media (min-width: 768px) {
+    .seccion-inferior {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .seccion-inferior .blog {
+        flex-basis: 60%;
+    }
+    
+    .seccion-inferior .testimoniales {
+        flex-basis: calc( 40% - 2rem);
+    }
 }
 
-.seccion-inferior .blog {
-    flex-basis: 60%;
-}
 
-.seccion-inferior .testimoniales {
-    flex-basis: calc( 40% - 2rem );
-}
 
-.entrada-blog {
-    display: flex;
-    justify-content: space-between;
+.entrada-blog {    
     margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) {
+    .entrada-blog {
+        display: flex;
+        justify-content: space-between;
+    }
 }
 
 .entrada-blog:last-of-type {
     margin-bottom: 0;
 }
 
-.entrada-blog .imagen {
-    flex-basis: 40%;
+@media (min-width: 768px) {
+    .entrada-blog .imagen {
+        flex-basis: 40%;
+    }
+    
+    .entrada-blog .texto-entrada {
+        flex-basis: calc( 60% - 3rem);
+    }    
 }
 
-.entrada-blog .texto-entrada {
-    flex-basis: calc( 60% - 3rem);
-}
 
 .texto-entrada a {
     color: #000000;
@@ -284,7 +385,9 @@ h4 {
     color: #E08709;
 }
 
+
 /** TESTIMONIALES **/
+
 .testimonial {
     background-color: #71B100;
     font-size: 2.4rem;
@@ -301,7 +404,7 @@ h4 {
     content: '';
     background-image: url(../img/comilla.svg);
     width: 4rem;
-    height: 4rem;    
+    height: 4rem;
     position: absolute;
     left: -2rem;
 }
@@ -314,15 +417,32 @@ h4 {
 
 
 /** FOOTER **/
+
 .site-footer {
     background-color: #333333;
     margin: 0;
 }
 
 .contenedor-footer {
-    padding: 3rem 0;   
-    display: flex; 
-    justify-content: space-between;
+    padding: 3rem 0;    
+    text-align: center;
+}
+
+@media (min-width: 768px) {
+    .contenedor-footer {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.site-footer nav {
+    display: none;
+}
+
+@media (min-width: 768px) {
+    .site-footer nav {
+        display: block;
+    }
 }
 
 .copyright {
@@ -330,13 +450,20 @@ h4 {
     color: #ffffff;
 }
 
+
 /** PAGINAS INTERNAS **/
+
+
 /* nosotros */
-.contenido-nosotros {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: 2rem;
+
+@media (min-width: 768px) {
+    .contenido-nosotros {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 2rem;
+    }
 }
+
 
 .texto-nosotros blockquote {
     font-weight: 900;
@@ -345,14 +472,18 @@ h4 {
     padding: 1rem 0 3rem 0;
 }
 
+
 /* anuncio */
+
 .resumen-propiedad {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
+
 /** contacto **/
+
 .contacto p {
     font-size: 1.4rem;
     color: #4f4f4f;
@@ -367,11 +498,11 @@ legend {
 label {
     font-weight: 700;
     text-transform: uppercase;
-    display: block;    
+    display: block;
 }
 
 input:not([type="submit"]),
-textarea, 
+textarea,
 select {
     padding: 1rem;
     display: block;
@@ -379,7 +510,7 @@ select {
     background-color: #e1e1e1e1;
     margin-bottom: 2rem;
     border: none;
-    border-radius: 1rem    
+    border-radius: 1rem
 }
 
 input[type="radio"] {
